--- a/ProjetoWeb/style.css
+++ b/ProjetoWeb/style.css
@@ -16,9 +16,8 @@ body{
 }
 #container{
   width: 360px;
-  /*height: 712px;*/
-  border: 1px solid red;
   margin: 56px auto 0px;
+  padding: 0 24px;
 }
 #profile{
   text-align: center;
@@ -33,11 +32,18 @@ body{
   font-weight: 500;
   line-height: 24px;
   margin-top: 8px;
+  height: 32px;
 }
 /*links*/
 
 #link-list{
   list-style: none;
+
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+
+  padding: 24px 0;
 }
 
 #link-list li a{
@@ -48,4 +54,46 @@ body{
   justify-content: center;
 
   padding: 16px 24px;
+
+  background: rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  border-radius: 8px;
+
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  text-decoration: none;
+  font-weight: 500;
+  transition: background .2s;
+}
+
+#link-list li a:hover{
+  background: rgba(255, 255, 255, 0.05);
+  border: 1.5px solid white;
+}
+/*social links*/
+#social-links{
+  display: flex;
+  justify-content: center;
+
+  padding: 24px 0;
+  font-size: 24px;
+
+}
+#social-links a{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 16px;
+
+  transition: background .3s;
+  border-radius: 50%;
+}
+#social-links a:hover{
+  background: rgba(255, 255, 255, 0.2);
+}
+
+footer{
+  padding: 24px 0;
+  text-align: center;
+  font-size: 14px;
 }
