--- a/ProjetoWeb/style.css
+++ b/ProjetoWeb/style.css
@@ -1,42 +1,104 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-body *{
-  font-family: 'inter';
-  font-weight: 500;
-  line-height: 24px;
-  color: #fff;
+:root {
+  --text-color: white;
+  --bg-url: url("./assets/bg-mobile.jpg");
+  --strok-color: rgba(255, 255, 255, 0.5);
+  --surface-color: (255, 255, 255, 0.1);
+  --surface-color-hover: rgba(0,0,0,0.02);
+  --highlight-color: rgba(255, 255, 255, 0.2);
+  --switch-bg-url: url("./assets/sun.svg");
 }
 
-body{
-  background: url('./assets/bg-mobile.jpg') no-repeat top center/cover;
+.light {
+  --text-color: black;
+  --bg-url: url("./assets/bg-mobile-light.jpg");
+  --strok-color: rgba(0,0,0,0.5);
+  --surface-color: rgba(0,0,0, 0.05);
+  --surface-color-hover: rgba(0,0,0,0.02);
+  --highlight-color: rgba(0,0,0,0.1);
+  --switch-bg-url: url("./assets/moon-stars.svg");
 }
-#container{
+
+body * {
+  font-family: "inter";
+  font-weight: 500;
+  line-height: 24px;
+  color: var(--text-color);
+}
+
+body {
+  background: var(--bg-url) no-repeat top center/cover;
+}
+#container {
   width: 360px;
   margin: 56px auto 0px;
   padding: 0 24px;
 }
-#profile{
+/*profile*/
+#profile {
   text-align: center;
   padding: 24px;
 }
 
-#profile img{
+#profile img {
   width: 112px;
 }
 
-#profile p{
+#profile p {
   font-weight: 500;
   line-height: 24px;
   margin-top: 8px;
   height: 32px;
 }
+/*switch*/
+#switch{
+  position: relative;
+  width: 64px;
+
+  margin: 4px auto;
+  
+}
+
+.light #switch button{
+  right: 0;
+  left: initial;
+  transition:  .3s;
+}
+
+#switch button{
+  width: 32px;
+  height: 32px;
+  background: white var(--switch-bg-url) no-repeat center;
+  border: 0;
+  border-radius: 50%;
+
+  position: absolute;
+  top: 50%;
+  left: 0;
+  z-index: 1;
+  transform: translateY(-50%);
+  transition: .3s;
+}
+#switch span{
+  display: block;
+  width: 64px;
+  height: 24px;
+  background: var(--surface-color);
+  border: 1px solid var(--strok-color);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  border-radius: 9999px;
+}
+
+
 /*links*/
 
-#link-list{
+#link-list {
   list-style: none;
 
   display: flex;
@@ -46,53 +108,52 @@ body{
   padding: 24px 0;
 }
 
-#link-list li a{
+#link-list li a {
   border: 1px solid red;
-  
+
   display: flex;
   align-items: center;
   justify-content: center;
 
   padding: 16px 24px;
 
-  background: rgba(255, 255, 255, 0.1);
-  border: 1px solid rgba(255, 255, 255, 0.5);
+  background: var(--surface-color);
+  border: 1px solid var(--strok-color);
   border-radius: 8px;
 
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
   text-decoration: none;
   font-weight: 500;
-  transition: background .2s;
+  transition: background 0.2s;
 }
 
-#link-list li a:hover{
-  background: rgba(255, 255, 255, 0.05);
-  border: 1.5px solid white;
+#link-list li a:hover {
+  background: var(--surface-color-hover);
+  border: 1.5px solid var(--text-color);
 }
 /*social links*/
-#social-links{
+#social-links {
   display: flex;
   justify-content: center;
 
   padding: 24px 0;
   font-size: 24px;
-
 }
-#social-links a{
+#social-links a {
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 16px;
 
-  transition: background .3s;
+  transition: background 0.3s;
   border-radius: 50%;
 }
-#social-links a:hover{
-  background: rgba(255, 255, 255, 0.2);
+#social-links a:hover {
+  background: var(--highlight-color);
 }
 
-footer{
+footer {
   padding: 24px 0;
   text-align: center;
   font-size: 14px;
